# ParakeetLipSync

./: .gitignore  BasicView.py  LipsyncFrame.py  MouthView.py  Parakeet.py  README.md  audio_player.py  auto_recognize.py  ipa_cmu.json  ipa_preston_blair.json  main.py  pyproject.toml  requirements.txt  waveform_widget.py
src/parakeet_lipsync/: __init__.py  app.py  audio_player.py  main.py  models.py  recognizer.py
